# rkdg_solver

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  actions.sh
docs/: prng_notes_ru.odt
include/firstparty/: gsse.hpp
include/firstparty/GSE/: GSE.hpp  guide_passing_callables.md
include/firstparty/GSE/detail/: alg.hpp  core.hpp  ode.hpp  sde.hpp  template.hpp
include/prng_test/: bad_prngs.hpp  prng_test_cases.hpp
include/rkdg/: config.hpp  legendre.hpp  rkdg_convdiff.hpp  rkdg_generic.hpp  rkdg_pdf.hpp
include/sde_test/: solver_wrappers.hpp
scripts/: dmbog_std_mathematica.wl  prng_test.nb  rkdg_plot_solution.nb  sde_test.nb
source/: CMakeLists.txt  legendre.hpp  main.cpp  prng_test.cpp  rkdg.cpp  sde_test.cpp
source/firstparty/: gsse.hpp  proto_utils.hpp
